纠正工件路径错误

--- a/.github/workflows/test-openwrt.yml
+++ b/.github/workflows/test-openwrt.yml
@@ -151,7 +151,7 @@ jobs:
       - name: Build package
         env:
           OPENWRT_GOLANG_COMMIT: ${{ secrets.OPENWRT_GOLANG_COMMIT }}
-        run: sh package/openwrt/make_openwrt.sh
+        run: sh ${{ github.workspace }}/package/openwrt/make_openwrt.sh
 
       - name: Show CCache Status
         run: |
@@ -179,4 +179,4 @@ jobs:
         with:
           tag_name: ${{ steps.tag.outputs.release_tag }}
           body_path: release.txt
-          files: ${{ github.workspace }}/openwrt/smartdns*.ipk
+          files: ${{ github.workspace }}/package/openwrt/smartdns*.ipk
