--- a/.github/workflows/test-openwrt.yml
+++ b/.github/workflows/test-openwrt.yml
@@ -10,6 +10,8 @@ jobs:
   get-version:
     name: get latest version number
     runs-on: ubuntu-latest
+    outputs:
+      CUR_VERSION: ${{steps.get-version.outputs.CUR_VERSION}}
     steps:
     - uses: actions/checkout@v3
       with:
@@ -20,14 +22,13 @@ jobs:
       id: get-version
       run: |
           #获取当前版本号
-          cd version_control
-          pre_version=$(cat VERSION | grep "PREFEX" | sed 's/PREFEX=\(.*\)/\1/')
-          cur_version=$(cat VERSION | grep "CUR_VERS" | sed 's/CUR_VERS=\(.*\)/\1/')
-          echo "CUR_VERSION=$pre_version$cur_version" >> $GITHUB_ENV
-          echo "::set-output name=CUR_VERSION::${{ env.CUR_VERSION }}"
-          echo "current version number is ${{ env.CUR_VERSION }}"
+          pre_version=$(cat version_control/VERSION | grep "PREFEX" | sed 's/PREFEX=\(.*\)/\1/')
+          cur_version=$(cat version_control/VERSION | grep "CUR_VERS" | sed 's/CUR_VERS=\(.*\)/\1/')
+          echo "::set-output name=CUR_VERSION::$pre_version$cur_version"
+          
   release:
     name: Build for ${{ matrix.arch }}
+    needs: get-version
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -168,7 +169,7 @@ jobs:
           echo "SDK_HOME=$sdk_home" >> $GITHUB_ENV
           echo "CONFIG_CCACHE=y" >> $GITHUB_ENV
           #修改版本号
-          sed -i "s/VER=.*/VER=${{ env.CUR_VERSION }}/" ${{ github.workspace }}/package/openwrt/make_openwrt.sh         
+          sed -i "s/VER=.*/VER=${{needs.get-version.outputs.CUR_VERSION}}/" ${{ github.workspace }}/package/openwrt/make_openwrt.sh         
       - name: Build package
         env:
           OPENWRT_GOLANG_COMMIT: ${{ secrets.OPENWRT_GOLANG_COMMIT }}
@@ -187,7 +188,7 @@ jobs:
       - name: Generate release tag
         id: tag
         run: |
-          echo "::set-output name=release_tag::${{ env.CUR_VERSION }}-OpenWrt"
+          echo "::set-output name=release_tag::${{needs.get-version.outputs.CUR_VERSION}}-OpenWrt"
           touch release.txt
           echo "同步更新上游代码" >> release.txt
           echo ${{ github.sha }} >> Release.txt
