--- a/.github/workflows/deploy-docker.yml
+++ b/.github/workflows/deploy-docker.yml
@@ -29,10 +29,12 @@ jobs:
           cd ${{ github.workspace }} 
           sed -i "s/VER=.*/VER=${{steps.get-version.outputs.CUR_VERSION}}/" package/build-pkg.sh
           #构建image
-          docker build -t pikuzheng/smartdns:latest -t pikuzheng/smartdns:${{steps.get-version.outputs.CUR_VERSION}} -f Dockerfile.alpine .
-      - name: Login to Registry
-        run: docker login --username=${{ secrets.DOCKER_USERNAME }} --password='${{ secrets.DOCKER_PASSWORD }}'
-      - name: Push Image
-        run: |
-          docker push pikuzheng/smartdns:latest
-          docker push pikuzheng/smartdns:${{steps.get-version.outputs.CUR_VERSION}}
+          docker login --username=${{ secrets.DOCKER_USERNAME }} --password='${{ secrets.DOCKER_PASSWORD }}'
+          docker buildx build --no-cache --platform linux/amd64,linux/arm64,linux/arm --push -t pikuzheng/smartdns:latest -t pikuzheng/smartdns:${{steps.get-version.outputs.CUR_VERSION}} -f Dockerfile.alpine .
+#      - name: Login to Registry
+#        run: |
+#          docker login --username=${{ secrets.DOCKER_USERNAME }} --password='${{ secrets.DOCKER_PASSWORD }}'
+#      - name: Push Image
+#        run: |
+#          docker push pikuzheng/smartdns:latest
+#          docker push pikuzheng/smartdns:${{steps.get-version.outputs.CUR_VERSION}}
