--- a/.github/workflows/deploy-docker.yml
+++ b/.github/workflows/deploy-docker.yml
@@ -23,6 +23,10 @@ jobs:
           cur_version=$(cat version_control/VERSION | grep "CUR_VERS" | sed 's/CUR_VERS=\(.*\)/\1/')
           echo "::set-output name=CUR_VERSION::$pre_version$cur_version"
       - uses: actions/checkout@v3
+      - uses: docker/setup-buildx-action@v2
+        with:
+          use: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6
+          install: true
       - name: Build Image
         run: |
           #修改版本号
@@ -30,7 +34,7 @@ jobs:
           sed -i "s/VER=.*/VER=${{steps.get-version.outputs.CUR_VERSION}}/" package/build-pkg.sh
           #构建image
           docker login --username=${{ secrets.DOCKER_USERNAME }} --password='${{ secrets.DOCKER_PASSWORD }}'
-          docker buildx build --no-cache --platform linux/amd64,linux/arm64,linux/arm --push -t pikuzheng/smartdns:latest -t pikuzheng/smartdns:${{steps.get-version.outputs.CUR_VERSION}} -f Dockerfile.alpine .
+          docker buildx --no-cache --platform linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6 --push -t pikuzheng/smartdns:latest -t pikuzheng/smartdns:${{steps.get-version.outputs.CUR_VERSION}} -f Dockerfile.alpine .
 #      - name: Login to Registry
 #        run: |
 #          docker login --username=${{ secrets.DOCKER_USERNAME }} --password='${{ secrets.DOCKER_PASSWORD }}'
