--- a/.github/workflows/deploy-docker.yml
+++ b/.github/workflows/deploy-docker.yml
@@ -23,9 +23,11 @@ jobs:
           cur_version=$(cat version_control/VERSION | grep "CUR_VERS" | sed 's/CUR_VERS=\(.*\)/\1/')
           echo "::set-output name=CUR_VERSION::$pre_version$cur_version"
       - uses: actions/checkout@v3
+      - uses: docker/setup-qemu-action@v2
+        with:
+          platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6
       - uses: docker/setup-buildx-action@v2
         with:
-          use: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6
           install: true
       - name: Build Image
         run: |
