--- a/.github/workflows/test-openwrt.yml
+++ b/.github/workflows/test-openwrt.yml
@@ -197,7 +197,8 @@ jobs:
         uses: softprops/action-gh-release@v1
         if: steps.tag.outputs.status == 'success'
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+          # do not use GITHUB_TOKEN
         with:
           tag_name: ${{ steps.tag.outputs.release_tag }}
           body_path: release.txt
