--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -9,6 +9,7 @@ RUN apk update && \
     sh ./package/build-pkg.sh --platform linux --arch `uname -m` --static && \
     strip /smartdns/src/smartdns && \
     mkdir -p /release/usr/sbin/ && \
+    mkdir -p /release/etc/smartdns/ && \
     cp /smartdns/src/smartdns /release/usr/sbin/
 
 # FROM alpine:3.16
