增加状态检查功能

--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -19,4 +19,5 @@ ENV TZ="Asia/Shanghai"
 COPY --from=smartdns-builder /release/ /
 EXPOSE 53/udp 53/tcp
 VOLUME "/etc/smartdns/"
+HEALTHCHECK --interval=5m CMD test `nslookup dns.pub 127.0.0.1 |grep answer |wc -l` -gt 0
 CMD ["/usr/sbin/smartdns", "-f", "-x", "-p -"]
