--- a/.github/workflows/test-new.yml
+++ b/.github/workflows/test-new.yml
@@ -52,8 +52,8 @@ jobs:
           sed -i "s/VER=.*/VER=${{needs.get-version.outputs.CUR_VERSION}}/" package/build-pkg.sh
 
           mkdir -p openssl
-          curl -sSL https://github.com/openssl/openssl/archive/refs/tags/OpenSSL_1_1_1q.tar.gz
-          tar -zxvf OpenSSL_1_1_1q.tar.gz --strip-components 1 -C openssl
+          curl -sSL https://github.com/openssl/openssl/archive/refs/tags/OpenSSL_1_1_1q.tar.gz -o openssl.tar.gz
+          tar -zxvf openssl.tar.gz --strip-components 1 -C openssl
 
           cat >> docker-build.sh << EOF
           apk add perl make coreutils tar pkgconfig dpkg
