--- a/.github/workflows/test-new.yml
+++ b/.github/workflows/test-new.yml
@@ -49,8 +49,8 @@ jobs:
           sudo timedatectl set-timezone "Asia/Shanghai"
           cd ${{ github.workspace }}
           #修改版本号
-          sed -i "s/VER=.*/VER=${{needs.get-version.outputs.CUR_VERSION}}/" package/build-pkg.sh
-
+          sed -i "s/VER=.*/VER=${{needs.get-version.outputs.CUR_VERSION}}/" ${{ github.workspace }}/package/build-pkg.sh
+          
           mkdir -p openssl
           curl -sSL https://github.com/openssl/openssl/archive/refs/tags/OpenSSL_1_1_1q.tar.gz -o openssl.tar.gz
           tar -zxvf openssl.tar.gz --strip-components 1 -C openssl
@@ -82,6 +82,7 @@ jobs:
           ./package/build-pkg.sh --platform optware --arch all --filearch $GOARCH-optware-edns --static --outputdir /workdir/build
           EOF
 
+          ls -l
           #生成edns补丁
           cat >> Makefile.patch << EOF
           --- Makefile
@@ -95,7 +96,7 @@ jobs:
            CXXFLAGS=-O2 -g -Wall -std=c++11
            override CXXFLAGS +=-Iinclude
           EOF
-
+          ls -la
           docker run -i --rm -v $(pwd):/workdir muslcc/x86_64:$GOARCH-linux-musl sh /workdir/build-run.sh
 
       - name: Upload To Artifact
