--- a/.github/workflows/test-openwrt.yml
+++ b/.github/workflows/test-openwrt.yml
@@ -176,27 +176,6 @@ jobs:
         run: |
           eval "${{ env.SDK_HOME }}/staging_dir/host/bin/ccache -s"
 
-      - name: Cleanup Cache
-        run: |
-          gh extension install actions/gh-actions-cache
-          
-          REPO=${{ github.repository }}
-          BRANCH="refs/pull/${{ github.event.pull_request.number }}/merge"
-
-          echo "Fetching list of cache key"
-          cacheKeysForPR=$(gh actions-cache list -R $REPO -B $BRANCH | cut -f 1 )
-
-          ## Setting this to not fail the workflow while deleting cache keys. 
-          set +e
-          echo "Deleting caches..."
-          for cacheKey in $cacheKeysForPR
-          do
-              gh actions-cache delete $cacheKey -R $REPO -B $BRANCH --confirm
-          done
-          echo "Done"
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
 #      - name: Upload To Artifact
 #        uses: actions/upload-artifact@v2
 #        with:
@@ -221,3 +200,12 @@ jobs:
           tag_name: ${{ steps.tag.outputs.release_tag }}
           body_path: release.txt
           files: ${{ github.workspace }}/package/openwrt/smartdns*.ipk
+
+  clean cache:
+    name: Build for ${{ matrix.arch }}
+    needs: get-version
+    runs-on: ubuntu-latest
+    steps:
+      uses: MyAlbum/purge-cache
+      with:
+        max-age: 1
